# mollusk

./: .gitignore  Cargo.toml  MOTIVATION.md  Makefile  README.md  current.diff
.github/: dependabot.yml
.github/actions/publish-setup/: action.yml
.github/workflows/: backport-1.18.yml  backport-2.0.yml  main.yml  publish.yml
bencher/src/: lib.rs  result.rs
bencher/tests/: markdown.rs
cli/: Cargo.toml
cli/src/: add_program.rs  config.rs  main.rs  matrix.rs  runner.rs
error/src/: error.rs
fuzz/fixture/: Cargo.toml
fuzz/fixture-fd/: Cargo.toml
fuzz/fixture-fd/src/: context.rs  feature_set.rs  instr_account.rs  lib.rs
fuzz/fixture/proto/: compute_budget.proto  sysvars.proto
fuzz/fixture/src/: compute_budget.rs  context.rs  lib.rs  sysvars.rs
harness/: Cargo.toml
harness/src/: account_store.rs  compile_accounts.rs  debugger.rs  epoch_stake.rs  feature_matrix.rs  feature_set.rs  file.rs  instructions_sysvar.rs  lib.rs  program.rs  register_tracing.rs  register_tracing_filter.rs  result.rs  sysvar.rs  vm.rs
harness/src/fuzz/: firedancer.rs  mod.rs  mollusk.rs
harness/src/vm/: agave.rs  mod.rs
harness/tests/: account_store.rs  bpf_program.rs  custom_syscall.rs  dump_fixture.rs  elf_loading.rs  fd_test_vectors.rs  feature_matrix.rs  instructions_sysvar.rs  observer.rs  precompile.rs  register_tracing.rs  state_persistence.rs  test.rs  transaction_instructions.rs
harness/tests/common/: mod.rs
keys/: Cargo.toml
keys/src/: accounts.rs
on-demand/: Cargo.toml
on-demand/src/: account_store.rs  lib.rs
programs/memo/src/: memo.rs  memo_v1.rs
programs/token/: Cargo.toml  README.md  update.sh
programs/token-2022/: Cargo.toml  update.sh
programs/token-2022/src/: extensions.rs  lib.rs
programs/token/src/: associated_token.rs  lib.rs  state.rs  token.rs  token2022.rs
programs/token/src/token/: mod.rs
programs/token/src/token/state/: mint.rs  mod.rs  multisig.rs  token_account.rs
result/: Cargo.toml
result/src/: check.rs  config.rs  fuzz.rs  lib.rs  result.rs  types.rs
scripts/: audit.sh  prepublish.sh  verify-crate-owners.sh
test-programs/: Cargo.toml
test-programs/primary/src/: lib.rs
test-programs/primary_v2/: Cargo.toml
test-programs/primary_v2/src/: lib.rs
vm/: Cargo.toml
vm/agave/: Cargo.toml
vm/agave/src/: lib.rs  precompile_keys.rs
vm/src/: lib.rs
