[workspace]
members = [
    "bencher",
    "cli",
    "error",
    "fuzz/*",
    "harness",
    "keys",
    "programs/*",
    "result",
    "test-programs/*",
]
resolver = "2"

[workspace.package]
authors = ["Anza Technology Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/anza-xyz/mollusk"
readme = "README.md"
license-file = "LICENSE"
edition = "2021"
version = "0.5.1"

[workspace.dependencies]
agave-feature-set = "3.0"
agave-precompiles = "3.0"
agave-syscalls = "3.0.0"
bincode = "1.3.3"
bs58 = "0.5.1"
chrono = "0.4.38"
clap = "4.5.4"
criterion = "0.5.1"
ed25519-dalek = "=1.0.1"
libsecp256k1 = "0.6.0"
mollusk-svm = { path = "harness", version = "0.5.1" }
mollusk-svm-bencher = { path = "bencher", version = "0.5.1" }
mollusk-svm-cli = { path = "cli", version = "0.5.1" }
mollusk-svm-error = { path = "error", version = "0.5.1" }
mollusk-svm-fuzz-fixture = { path = "fuzz/fixture", version = "0.5.1" }
mollusk-svm-fuzz-fixture-firedancer = { path = "fuzz/fixture-fd", version = "0.5.1" }
mollusk-svm-fuzz-fs = { path = "fuzz/fs", version = "0.5.1" }
mollusk-svm-keys = { path = "keys", version = "0.5.1" }
mollusk-svm-programs-memo = { path = "programs/memo", version = "0.5.1" }
mollusk-svm-result = { path = "result", version = "0.5.1" }
mollusk-svm-programs-token = { path = "programs/token", version = "0.5.1" }
num-format = "0.4.4"
openssl = "0.10.72"
prost = "0.9"
prost-build = "0.9"
prost-types = "0.9"
rand0-7 = { package = "rand", version = "0.7" }
rayon = "1.10.0"
serde = "1.0.203"
serde_json = "1.0.117"
serde_yaml = "0.9.34"
serial_test = "2.0"
solana-account = "3.0"
solana-account-info = "3.0"
solana-bpf-loader-program = "3.0"
solana-clock = "3.0"
solana-compute-budget = "3.0"
solana-cpi = "3.0"
solana-ed25519-program = "3.0"
solana-epoch-rewards = "3.0"
solana-epoch-schedule = "3.0"
solana-hash = "3.0"
solana-instruction = "3.0"
solana-instruction-error = { version = "2.0", features = ["serde"] }
solana-keccak-hasher = "3.0"
solana-loader-v3-interface = "6.1.0"
solana-loader-v4-interface = "3.1.0"
solana-logger = "3.0"
solana-native-token = "3.0"
solana-precompile-error = "3.0"
solana-program-entrypoint = "3.0"
solana-program-error = "3.0"
solana-program-pack = "3.0"
solana-program-runtime = "3.0"
solana-pubkey = "3.0"
solana-rent = "3.0"
solana-sdk-ids = "3.0"
solana-secp256k1-program = "3.0"
solana-secp256r1-program = "3.0"
solana-sha256-hasher = { version = "3.0", features = ["sha2"] }
solana-slot-hashes = "3.0"
solana-stake-interface = "2.0"
solana-stake-program = "3.0"
solana-svm-callback = "3.0"
solana-svm-log-collector = "3.0"
solana-svm-timings = "3.0"
solana-system-interface = "2.0"
solana-system-program = "3.0"
solana-sysvar = "3.0"
solana-sysvar-id = "3.0"
solana-timings = "3.0"
solana-transaction-context = "3.0"
spl-associated-token-account-interface = "2.0.0"
spl-token-interface = "2.0.0"
thiserror = "1.0.64"
tokio = "1.37.0"
which = "=4.4.0"


# Unfortunately we still need a number of patches until updated SPL crates are all published
[patch.crates-io]
solana-address = { version = "1.0", git = "https://github.com/anza-xyz/solana-sdk.git" }
solana-pubkey = { version = "3.0", git = "https://github.com/anza-xyz/solana-sdk.git" }
solana-sdk = { version = "3.0", git = "https://github.com/anza-xyz/solana-sdk.git" }
solana-program-entrypoint = { version = "3.0", git = "https://github.com/anza-xyz/solana-sdk.git" }
solana-program-error = { version = "3.0", git = "https://github.com/anza-xyz/solana-sdk.git" }
# solana-program-runtime = { version = "=3.0.0", git = "https://github.com/anza-xyz/agave.git" }
solana-sysvar = { version = "3.0", git = "https://github.com/anza-xyz/solana-sdk.git" }
solana-sysvar-id = { version = "3.0", git = "https://github.com/anza-xyz/solana-sdk.git" }
solana-account = { version = "3.0", git = "https://github.com/anza-xyz/solana-sdk.git" }
solana-account-info = { version = "3.0", git = "https://github.com/anza-xyz/solana-sdk.git" }
solana-instruction = { version = "3.0", git = "https://github.com/anza-xyz/solana-sdk.git" }
solana-message = { version = "3.0", git = "https://github.com/anza-xyz/solana-sdk.git" }
solana-instruction-error = { version = "2.0", git = "https://github.com/anza-xyz/solana-sdk.git" }
solana-transaction-context = { version = "3.0", git = "https://github.com/anza-xyz/agave.git" }
solana-transaction-error = { version = "3.0", git = "https://github.com/anza-xyz/solana-sdk.git" }
solana-signer = { version = "3.0", git = "https://github.com/anza-xyz/solana-sdk.git" }
solana-nonce = { version = "3.0", git = "https://github.com/anza-xyz/solana-sdk.git" }
solana-bincode = { version = "3.0", git = "https://github.com/anza-xyz/solana-sdk.git" }
solana-transaction     = { version = "3.0", git = "https://github.com/anza-xyz/solana-sdk.git" }
solana-sanitize        = { version = "3.0", git = "https://github.com/anza-xyz/solana-sdk.git" }
solana-hash            = { version = "3.0", git = "https://github.com/anza-xyz/solana-sdk.git" }
solana-nonce-account   = { version = "3.0", git = "https://github.com/anza-xyz/solana-sdk.git" }
solana-signature = { version = "3.0", git = "https://github.com/anza-xyz/solana-sdk.git" }
solana-rent = { version = "3.0", git = "https://github.com/anza-xyz/solana-sdk.git" }
solana-slot-hashes = { version = "3.0", git = "https://github.com/anza-xyz/solana-sdk.git" }
solana-epoch-schedule = { version = "3.0", git = "https://github.com/anza-xyz/solana-sdk.git" }
solana-epoch-rewards = { version = "3.0", git = "https://github.com/anza-xyz/solana-sdk.git" }
solana-clock = { version = "3.0", git = "https://github.com/anza-xyz/solana-sdk.git" }
solana-last-restart-slot = { version = "3.0", git = "https://github.com/anza-xyz/solana-sdk.git" }
# solana-compute-budget = { version = "3.0", git = "https://github.com/anza-xyz/agave.git" }
solana-svm-timings = { version = "3.0", git = "https://github.com/anza-xyz/agave.git" }
solana-svm-callback = { version = "3.0", git = "https://github.com/anza-xyz/agave.git" }
# solana-bpf-loader-program = { version = "3.0", git = "https://github.com/anza-xyz/agave.git" }
solana-loader-v3-interface = { version = "6.1.0", git = "https://github.com/anza-xyz/solana-sdk.git" }
solana-loader-v4-interface = { version = "3.1.0", git = "https://github.com/anza-xyz/solana-sdk.git" }
solana-stake-program = { version = "3.0", git = "https://github.com/anza-xyz/agave.git" }
spl-associated-token-account = { version = "7.0.0", git = "https://github.com/solana-program/associated-token-account.git" }
