[workspace]
members = [
    "bencher",
    "cli",
    "error",
    "fuzz/*",
    "harness",
    "programs/*",
    "result",
    "test-programs/*",
]
resolver = "2"

[workspace.package]
authors = ["Anza Technology Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/anza-xyz/mollusk"
readme = "README.md"
license-file = "LICENSE"
edition = "2021"
version = "0.12.1-agave-4.0"

[workspace.dependencies]
agave-feature-set = "4.0.0-beta.6"
agave-precompiles = "4.0.0-beta.6"
agave-syscalls = "4.0.0-beta.6"
bincode = "1.3.3"
bs58 = "0.5.1"
chrono = "0.4.44"
clap = "4.5.60"
criterion = "0.8.2"
hex = "0.4.3"
ed25519-dalek = "=2.1.1"
libsecp256k1 = "0.7.2"
mollusk-svm = { path = "harness", version = "0.12.1-agave-4.0" }
mollusk-svm-bencher = { path = "bencher", version = "0.12.1-agave-4.0" }
mollusk-svm-cli = { path = "cli", version = "0.12.1-agave-4.0" }
mollusk-svm-error = { path = "error", version = "0.12.1-agave-4.0" }
mollusk-svm-fuzz-fixture = { path = "fuzz/fixture", version = "0.12.1-agave-4.0" }
mollusk-svm-fuzz-fixture-firedancer = { path = "fuzz/fixture-fd", version = "0.12.1-agave-4.0" }
mollusk-svm-fuzz-fs = { path = "fuzz/fs", version = "0.12.1-agave-4.0" }
mollusk-svm-programs-memo = { path = "programs/memo", version = "0.12.1-agave-4.0" }
mollusk-svm-result = { path = "result", version = "0.12.1-agave-4.0" }
mollusk-svm-programs-token = { path = "programs/token", version = "0.12.1-agave-4.0" }
num-format = "0.4.4"
openssl = "0.10.76"
prost = "0.14"
prost-build = "0.14"
prost-types = "0.14"
rand0-7 = { package = "rand", version = "0.7" }
rayon = "1.10.0"
serde = "1.0.203"
serde_json = "1.0.149"
serde_yaml = "0.9.34"
serial_test = "2.0"
sha2 = "0.10.9"
solana-account = "3.4.0"
solana-account-info = "3.1.0"
solana-bpf-loader-program = "4.0.0-beta.6"
solana-clock = "3.0.1"
solana-compute-budget = "4.0.0-beta.6"
solana-compute-budget-program = "4.0.0-beta.6"
solana-cpi = "3.1.0"
solana-ed25519-program = "3.0.0"
solana-epoch-rewards = "3.0.0"
solana-epoch-schedule = "3.0.0"
solana-fee-calculator = "3.1.0"
solana-hash = "4.2.0"
solana-instruction = "3.2.0"
solana-instruction-error = { version = "2.1.0", features = ["serde"] }
solana-instructions-sysvar = "3.0.0"
solana-keccak-hasher = { version = "3.1.0", features = ["sha3"] }
solana-loader-v3-interface = "6.1.0"
solana-loader-v4-interface = "3.1.0"
solana-loader-v4-program = "4.0.0-beta.6"
solana-logger = "3.0.0"
solana-message = "3.1.0"
solana-msg = "3.0.0"
solana-native-token = "3.0.0"
solana-precompile-error = "3.0.0"
solana-program-entrypoint = "3.1.1"
solana-program-error = "3.0.0"
solana-program-pack = "3.1.0"
solana-program-runtime = "4.0.0-beta.6"
solana-pubkey = "4.1.0"
solana-rent = "3.0.0"
solana-sdk-ids = "3.1.0"
solana-secp256k1-program = "3.0.1"
solana-secp256r1-program = "3.0.0"
solana-slot-hashes = "3.0.1"
solana-stake-interface = "2.0.2"
solana-svm-callback = "4.0.0-beta.6"
solana-svm-log-collector = "4.0.0-beta.6"
solana-svm-timings = "4.0.0-beta.6"
solana-svm-transaction = "4.0.0-beta.6"
solana-system-interface = "3.0"
solana-system-program = "4.0.0-beta.6"
solana-sysvar = "3.1.1"
solana-sysvar-id = "3.1.0"
solana-transaction-context = "4.0.0-beta.6"
solana-transaction-error = "3.0.0"
solana-transaction-status-client-types = "4.0.0-beta.6"
solana-vote-program = "4.0.0-beta.6"
solana-zk-elgamal-proof-program = "4.0.0-beta.6"
spl-associated-token-account-interface = "2.0.0"
spl-token-interface = "2.0.0"
thiserror = "2.0.17"
tokio = "1.51.0"
