[workspace]
members = [
    "bencher",
    "cli",
    "error",
    "fuzz/*",
    "harness",
    "programs/*",
    "result",
]
exclude = ["test-programs"]
resolver = "2"

[workspace.package]
authors = ["Anza Technology Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/anza-xyz/mollusk"
readme = "README.md"
license-file = "LICENSE"
edition = "2021"
version = "0.13.4"

[workspace.dependencies]
agave-feature-set = { version = "4.2.0-alpha.0", git = "https://github.com/anza-xyz/agave-runtime.git" }
agave-precompiles = { version = "4.2.0-alpha.0", git = "https://github.com/anza-xyz/agave-runtime.git" }
bincode = "1.3.3"
bs58 = "0.5.1"
chrono = "0.4.44"
clap = "4.6.1"
criterion = "0.8.2"
hex = "0.4.3"
ed25519-dalek = "=2.1.1"
libsecp256k1 = "0.7.2"
mollusk-svm = { path = "harness", version = "0.13.4" }
mollusk-svm-bencher = { path = "bencher", version = "0.13.4" }
mollusk-svm-cli = { path = "cli", version = "0.13.4" }
mollusk-svm-error = { path = "error", version = "0.13.4" }
mollusk-svm-fuzz-fixture = { path = "fuzz/fixture", version = "0.13.4" }
mollusk-svm-fuzz-fixture-firedancer = { path = "fuzz/fixture-fd", version = "0.13.4" }
mollusk-svm-fuzz-fs = { path = "fuzz/fs", version = "0.13.4" }
mollusk-svm-programs-memo = { path = "programs/memo", version = "0.13.4" }
mollusk-svm-result = { path = "result", version = "0.13.4" }
mollusk-svm-programs-token = { path = "programs/token", version = "0.13.4" }
mollusk-svm-programs-token-2022 = { path = "programs/token-2022", version = "0.13.4" }
num-format = "0.4.4"
openssl = "0.10.78"
prost = "0.14"
prost-build = "0.14"
prost-types = "0.14"
rand0-7 = { package = "rand", version = "0.7" }
rayon = "1.12.0"
serde = "1.0.203"
serde_json = "1.0.150"
serde_yaml = "0.9.34"
serial_test = "2.0"
sha2 = "0.10.9"
solana-account = "4.3.0"
solana-account-info = "3.1.0"
solana-bpf-loader-program = { version = "4.2.0-alpha.0", git = "https://github.com/anza-xyz/agave-runtime.git" }
solana-clock = "3.0.1"
solana-compute-budget = { version = "4.2.0-alpha.0", git = "https://github.com/anza-xyz/agave-runtime.git" }
solana-compute-budget-program = { version = "4.2.0-alpha.0", git = "https://github.com/anza-xyz/agave-runtime.git" }
solana-cpi = "3.1.0"
solana-ed25519-program = "3.0.0"
solana-epoch-rewards = "3.0.0"
solana-epoch-schedule = "3.0.0"
solana-fee-calculator = "3.1.0"
solana-hash = "4.2.0"
solana-instruction = "3.4.0"
solana-instruction-error = { version = "2.3.0", features = ["serde"] }
solana-instructions-sysvar = "3.0.0"
solana-keccak-hasher = { version = "3.1.0", features = ["sha3"] }
solana-loader-v3-interface = "7.0.0"
solana-logger = "3.0.0"
solana-message = "4.2.0"
solana-msg = "3.0.0"
solana-native-token = "3.0.0"
solana-precompile-error = "3.0.0"
solana-program-entrypoint = "3.1.1"
solana-program-error = "3.0.1"
solana-program-option = "3.1.0"
solana-program-pack = "3.1.0"
solana-program-runtime = { version = "4.2.0-alpha.0", git = "https://github.com/anza-xyz/agave-runtime.git" }
solana-pubkey = "4.2.0"
solana-rent = { version = "4.2.0", features = ["serde", "sysvar"] }
solana-sdk-ids = "3.1.0"
solana-secp256k1-program = "3.0.1"
solana-secp256r1-program = "3.0.0"
solana-slot-hashes = "3.0.2"
solana-stake-interface = { version = "4.2.0", features = ["serde", "sysvar"] }
solana-svm-callback = { version = "4.2.0-alpha.0", git = "https://github.com/anza-xyz/agave-runtime.git" }
solana-svm-feature-set = { version = "4.2.0-alpha.0", git = "https://github.com/anza-xyz/agave-runtime.git" }
solana-svm-log-collector = { version = "4.2.0-alpha.0", git = "https://github.com/anza-xyz/agave-runtime.git" }
solana-svm-timings = { version = "4.2.0-alpha.0", git = "https://github.com/anza-xyz/agave-runtime.git" }
solana-svm-transaction = { version = "4.2.0-alpha.0", git = "https://github.com/anza-xyz/agave-runtime.git" }
solana-syscalls = { version = "4.2.0-alpha.0", git = "https://github.com/anza-xyz/agave-runtime.git" }
solana-system-interface = "3.2.0"
solana-system-program = { version = "4.2.0-alpha.0", git = "https://github.com/anza-xyz/agave-runtime.git" }
solana-sysvar = { version = "4.0.0", features = ["bincode"] }
solana-sysvar-id = "3.1.0"
solana-transaction-context = { version = "4.2.0-alpha.0", git = "https://github.com/anza-xyz/agave-runtime.git" }
solana-transaction-error = "3.2.0"
solana-transaction-status-client-types = { version = "4.2.0-alpha.0", git = "https://github.com/anza-xyz/agave-runtime.git" }
solana-vote-program = { version = "4.2.0-alpha.0", git = "https://github.com/anza-xyz/agave-runtime.git" }
solana-zk-elgamal-proof-program = { version = "4.2.0-alpha.0", git = "https://github.com/anza-xyz/agave-runtime.git" }
spl-associated-token-account-interface = "2.0.0"
spl-token-2022-interface = "3.0.1"
spl-token-group-interface = "0.7.2"
spl-token-interface = "2.0.0"
spl-token-metadata-interface = "1.0.0"
thiserror = "2.0.17"
tokio = "1.52.1"
