[package]
name = "mollusk-svm-cli"
description = "Mollusk CLI."
documentation = "https://docs.rs/mollusk-svm-cli"
authors = { workspace = true }
repository = { workspace = true }
license-file ={ workspace = true }
edition = { workspace = true }
version = { workspace = true }

[dependencies]
agave-feature-set = { workspace = true }
bs58 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
mollusk-svm = { workspace = true, features = ["fuzz", "fuzz-fd"] }
mollusk-svm-bencher = { workspace = true }
mollusk-svm-fuzz-fixture = { workspace = true }
mollusk-svm-fuzz-fixture-firedancer = { workspace = true }
mollusk-svm-result = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
solana-logger = { workspace = true }
solana-pubkey = { workspace = true }
solana-sdk-ids = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[[bin]]
name = "mollusk"
path = "src/main.rs"
