[workspace]
members = [
    "cpi-target",
    "custom-syscall",
    "epoch-stake",
    "instructions-sysvar",
    "noop-log",
    "primary",
]
resolver = "2"

[workspace.dependencies]
solana-account-info = "3.1.0"
solana-cpi = "3.1.0"
solana-instruction = "3.2.0"
solana-instructions-sysvar = "3.0.0"
solana-msg = "3.0.0"
solana-program-entrypoint = "3.1.1"
solana-program-error = "3.0.0"
solana-pubkey = "4.1.0"
solana-sdk-ids = "3.1.0"
solana-system-interface = "3.0"
