[package]
name = "mollusk-svm-vm"
description = "Mollusk VM interface"
authors = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[features]
invocation-inspect-callback = []

[dependencies]
agave-feature-set = { workspace = true }
mollusk-svm-result = { workspace = true }
solana-account = { workspace = true }
solana-compute-budget = { workspace = true }
solana-instruction = { workspace = true }
solana-program-runtime = { workspace = true }
solana-pubkey = { workspace = true }
solana-rent = { workspace = true }
solana-svm-log-collector = { workspace = true }
solana-svm-timings = { workspace = true }
solana-transaction-context = { workspace = true }
