[package]
name = "mollusk-svm-programs-token-2022"
description = "SVM program SPL Token-2022."
documentation = "https://docs.rs/mollusk-svm-programs-token-2022"
authors = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[features]
default = []
extensions = [
    "dep:spl-token-2022-interface",
    "dep:spl-token-group-interface",
    "dep:spl-token-metadata-interface",
]

[dependencies]
mollusk-svm = { workspace = true }
solana-account = { workspace = true }
solana-program-pack = { workspace = true }
solana-pubkey = { workspace = true }
solana-rent = { workspace = true }
spl-token-interface = { workspace = true }
spl-token-2022-interface = { workspace = true, optional = true }
spl-token-group-interface = { workspace = true, optional = true }
spl-token-metadata-interface = { workspace = true, optional = true }

[dev-dependencies]
solana-program-option = { workspace = true }
