[package]
name = "mollusk-svm-programs-token"
description = "SVM program SPL Token."
documentation = "https://docs.rs/mollusk-svm-programs-token"
authors = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
license-file ={ workspace = true }
edition = { workspace = true }
version = { workspace = true }

[features]
default = ["token", "associated-token", "token-2022"]
token = []
associated-token = ["dep:spl-associated-token-account-interface"]
token-2022 = [
    "dep:spl-token-2022-interface",
    "dep:spl-token-group-interface",
    "dep:spl-token-metadata-interface",
]

[dependencies]
mollusk-svm = { workspace = true }
solana-account = { workspace = true }
solana-program-pack = { workspace = true }
solana-pubkey = { workspace = true }
solana-rent = { workspace = true }
spl-token-interface = { workspace = true }
spl-associated-token-account-interface = { workspace = true, optional = true  }
spl-token-2022-interface = { workspace = true, optional = true }
spl-token-group-interface = { workspace = true, optional = true }
spl-token-metadata-interface = { workspace = true, optional = true }

[dev-dependencies]
solana-program-option = { workspace = true }
