[package]
name = "mollusk-svm-vm-agave"
description = "Anza's Agave VM implementation for Mollusk"
authors = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[features]
invocation-inspect-callback = ["mollusk-svm-vm/invocation-inspect-callback"]
precompiles = []

[dependencies]
mollusk-svm-error = { workspace = true }
mollusk-svm-keys = { workspace = true }
mollusk-svm-result = { workspace = true }
mollusk-svm-vm = { workspace = true }
solana-account = { workspace = true }
solana-instruction = { workspace = true }
solana-instruction-error = { workspace = true }
solana-program-runtime = { workspace = true }
solana-pubkey = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-svm-timings = { workspace = true }
solana-transaction-context = { workspace = true }
